tests/error/lambda_mismatch1.gw
#! [contains] not enough arguments for lambda
\a b { <<< a, " ", b >>>; }(1);
